# stacks-sbtc

./: .gitignore  AI_POLICY.md  Cargo.toml  README.md  coverage.sh  wl-copy
.doc/: cloudflare.sh  index.html
.github/ISSUE_TEMPLATE/: risk-issue-template.md  risk-issue.md
.github/workflows/: clarinet.yml  rust.yml  static-old.yml  static.yml
.install/: bitcoin.sh
frost-coordinator/: Cargo.toml  README.md
frost-coordinator/conf/: signer.toml
frost-coordinator/src/: coordinator.rs  lib.rs  main.rs
frost-signer/: Cargo.toml
frost-signer/conf/: signer.toml  signer1.toml  signer2.toml  signer3.toml
frost-signer/src/: config.rs  lib.rs  logging.rs  main.rs  net.rs  signer.rs  signing_round.rs  state_machine.rs  util.rs
frost-signer/tests/: messages.rs  net.rs
frost-test/: Cargo.toml
frost-test/docs/: frost-btc.md
frost-test/src/: bitcoind.rs  lib.rs  sync_test.rs  v1.rs
frost-test/tests/: frost-btc.rs  pure_frost.rs
misc/bitcoin_rpc_scripts/: createwallet.sh  getdescriptorinfo.sh  importaddress.sh  listunspent.sh  listwallets.sh  unloadwallet.sh
misc/btctool/: .gitignore  Dockerfile  Makefile  README.md  btctool-cli  devenv-install.sh  devenv-run.sh  docker-deploy.sh  docker-run.sh  pyproject.toml  release.sh
misc/btctool/btctool/: btctool.py  commands.py  meat.py  sign.py  tx_utils.py  utils.py  utxo_utils.py
misc/test_vector_generation/: Cargo.toml  README.md
misc/test_vector_generation/src/: main.rs
relay-server/: Cargo.toml  README.md  proc-test.sh
relay-server/src/: http.rs  io_stream.rs  lib.rs  main.rs  mem_io_stream.rs  mem_state.rs  proxy_state.rs  remote_state.rs  server.rs  state.rs
relay-server/src/http/: message.rs  mod.rs  request.rs  response.rs  to_io_result.rs
sbtc-cli/: Cargo.toml
sbtc-cli/src/: main.rs
sbtc-cli/src/commands/: broadcast.rs  deposit.rs  generate.rs  utils.rs  withdraw.rs
sbtc-mini/: .gitignore  Clarinet.toml  README.md
sbtc-mini/contracts/: clarity-bitcoin.clar  pox-3.clar  sbtc-btc-tx-helper.clar  sbtc-controller.clar  sbtc-deposit-processor.clar  sbtc-deposit-verifier.clar  sbtc-hand-off.clar  sbtc-peg-in-processor.clar  sbtc-peg-out-processor.clar  sbtc-peg-transfer.clar  sbtc-registry.clar  sbtc-stacking-pool.clar  sbtc-testnet-debug-controller.clar  sbtc-token.clar  sbtc-wallet-vote.clar  sbtc-withdrawal-processor.clar  sbtc-withdrawal-request-btc.clar  sbtc-withdrawal-request-reclaim.clar  sbtc-withdrawal-request-stx.clar  sbtc-withdrawal-verifier.clar
sbtc-mini/deployments/: bootstrap.devnet-plan.yaml  default.devnet-plan.yaml  signer-1-pre-register.devnet-plan.yaml  signer-2-register.devnet-plan.yaml  signer-3-vote.devnet-plan.yaml  signer-4-transfer-wallet.devnet-plan.yaml  signer-5-prove-transfer.devnet-plan.yaml  user-1-deposit.devnet-plan.yaml
sbtc-mini/ext/: extract-error-codes.ts  generate-flow-tests.ts  generate-proof.ts  generate-test-vectors.ts  generate-tests.ts
sbtc-mini/scripts/: coverage-report.sh  extract-error-codes.sh  integration-test.sh  test.sh
sbtc-mini/settings/: Devnet.toml
sbtc-mini/tests/: bootstrap.ts  clarity-bitcoin_test.clar  sbtc-btc-tx-helper_test.clar  sbtc-controller_test.clar  sbtc-deposit-processor_test.clar  sbtc-deposit-verifier_test.clar  sbtc-hand-off_test.clar  sbtc-peg-in-processor_test.clar  sbtc-registry_test.clar  sbtc-stacking-pool_allow_flow_test.clar  sbtc-stacking-pool_amounts_flow_test.clar  sbtc-stacking-pool_as_protocol_test.clar  sbtc-stacking-pool_flow_test.clar  sbtc-stacking-pool_inactive_flow_test.clar  sbtc-stacking-pool_signer_test.clar  sbtc-stacking-pool_test.clar  sbtc-stacking-pool_two_signers_flow_test.clar  sbtc-token_test.clar  sbtc-withdrawal-request-stx_test.clar  sbtc-withdrawal-verifier_test.clar
sbtc-op/: Cargo.toml
sbtc-op/src/: main.rs
sbtc-ops/: README.md
sbtc-ops/clarinet/: Clarinet.toml
sbtc-planning/: README.md  commit-reveal-ops.md
stacks-coordinator/: Cargo.toml  README.md  db.sqlite
stacks-coordinator-mini/: Cargo.toml  README.md
stacks-coordinator/conf/: coordinator.toml  signer.toml
stacks-coordinator/src/: bitcoin_node.rs  bitcoin_wallet.rs  cli.rs  config.rs  coordinator.rs  error.rs  fee_wallet.rs  frost_coordinator.rs  job_queue.rs  lib.rs  main.rs  make_contract_call.rs  peg_wallet.rs  stacks_node.rs  stacks_transaction.rs  stacks_wallet.rs  stacks_wallet_js.rs  util.rs
stacks-coordinator/src/peg_queue/: mod.rs  sqlite_peg_queue.rs
stacks-coordinator/src/stacks_node/: client.rs  mod.rs
stacks-coordinator/tests/: local_bitcoin_node.rs  make_contract_call_tests.rs  stacks_wallet_js_tests.rs
stacks-dev-guide/: guide.md  tools.md  working-with-projects.md
stacks-doctor/: Cargo.toml  README.md
stacks-doctor/src/: cli.rs  main.rs
stacks-doctor/src/commands/: analyze_logs.rs  burns.rs  env.rs  mod.rs  reorgs.rs
stacks-js-rs/: Cargo.toml  README.md  console.mjs
stacks-js-rs/js/: async_throw.ts  lib.ts  mirror.ts  stacks.ts  throw.ts
stacks-js-rs/src/: js.rs  lib.rs  rpc.rs  stacks_wallet_js.rs  to_io_result.rs
stacks-js-rs/tests/: rpc.rs
stacks-signer/: Cargo.toml  README.md
stacks-signer-api/: .env  Cargo.toml  README.md  dev-signer-api.sqlite  outdated-README.md  sqlx-data.json
stacks-signer-api/migrations/: 20230614163551_init.sql
stacks-signer-api/src/: config.rs  error.rs  key.rs  lib.rs  main.rs  signer.rs  transaction.rs  vote.rs
stacks-signer-api/src/conf/: signer.toml
stacks-signer-api/src/db/: config.rs  keys.rs  mod.rs  signers.rs  transaction.rs  vote.rs
stacks-signer-api/src/routes/: config.rs  keys.rs  mod.rs  signers.rs  transaction.rs  transactions.rs  vote.rs
stacks-signer-mini/: Cargo.toml
stacks-signer/conf/: signer.toml
stacks-signer/src/: cli.rs  lib.rs  main.rs  secp256k1.rs  signer.rs
stacks-signer/tests/: cli.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
test-vectors/: Cargo.toml  README.md
test-vectors/src/: lib.rs  main.rs  peg_handoff.rs  peg_in.rs  peg_out.rs  utils.rs
yarpc/: Cargo.toml  README.md
yarpc/js/: lib.ts
yarpc/src/: js.rs  lib.rs  read_ex.rs  rpc.rs  to_io_result.rs
yarpc/tests/: deno.rs
(+21 files in other folders)
