[workspace]
members = [
  "relay-server",
  "frost-test",
  "frost-signer",
  "frost-coordinator",
  "stacks-coordinator",
  "stacks-signer",
  "stacks-doctor",
  "test-utils",
  "test-vectors",
  "yarpc"]

[workspace.dependencies]
bs58 = "0.4"
blockstack-core = { git = "https://github.com/stacks-network/stacks-blockchain/", branch = "next" }
clap = { version = "4.1.1", features = ["derive", "env"] }
p256k1 = "5"
wsts = "1"
rusqlite = "0.24.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
thiserror = "1.0"
toml = "0.7.2"
rand_core = "0.6"
hashbrown = "0.13"
bincode = "1.3.3"
itertools = "^0.10.5"
sha2 = "0.10"
ureq = { version = "2.6", features = ["json"] }
rand = "0.8.5"
backoff = "0.4"
mockall = "0.11.3"
markdown-toc = "0.2.0"
reqwest = "0.11.14"
aes-gcm = "0.10"
