[workspace]
members = [
  "relay-server",
  "frost-test",
  "frost-signer",
  "frost-coordinator",
  "sbtc-cli",
  "stacks-coordinator",
  "stacks-signer",
  "stacks-signer-api",
  "stacks-doctor",
  "test-utils",
  "test-vectors",
  "yarpc"]

[workspace.dependencies]
anyhow = "1.0"
array-bytes = "6.1.0"
bdk = "0.28.0"
bs58 = "0.5"
bitcoin = { version = "0.29.2", features = ["rand", "bitcoinconsensus"] }
blockstack-core = { git = "https://github.com/stacks-network/stacks-blockchain/", branch = "next" }
clap = { version = "4.1.1", features = ["derive", "env"] }
hex = "0.4.3"
p256k1 = "5.1"
wsts = "1.2"
rusqlite = "0.24.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
thiserror = "1.0"
toml = "0.7.2"
rand_core = "0.6"
hashbrown = "0.13"
bincode = "1.3.3"
itertools = "^0.11.0"
sha2 = "0.10"
ureq = { version = "2.6", features = ["json"] }
url = "2.3.1"
rand = "0.8.5"
backoff = "0.4"
mockall = "0.11.3"
markdown-toc = "0.2.0"
reqwest = "0.11.14"
aes-gcm = "0.10"
sha256 = "=1.1.3"
secp256k1 = { version = "0.27.0", features = ["global-context", "recovery", "serde", "bitcoin-hashes"] }
regex = "~1.8.4"
