[package]
name = "frost-coordinator"
version = "0.0.1"
license = "GPLv3"
homepage = "https://github.com/Trust-Machines/core-eng"
repository = "https://github.com/Trust-Machines/core-eng"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = "0.4"
clap = { version = "4.1.1", features = ["derive"] }
hashbrown = { version = "0.13", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
frost-signer = { version = "0.0.1", path = "../frost-signer" }

[lib]
path = "src/lib.rs"    # The source file of the target
crate-type = ["lib"]   # The crate types to generate

[[bin]]
name = "frost-coordinator"
path = "src/main.rs"
