[package]
name = "frost-coordinator"
version = "0.0.1"
license = "GPLv3"
homepage = "https://github.com/Trust-Machines/core-eng"
repository = "https://github.com/Trust-Machines/core-eng"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = { workspace = true }
clap = { workspace = true }
hashbrown = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
frost-signer = { version = "0.0.1", path = "../frost-signer" }

[lib]
path = "src/lib.rs"    # The source file of the target
crate-type = ["lib"]   # The crate types to generate

[[bin]]
name = "frost-coordinator"
path = "src/main.rs"
