[package]
name = "frost-coordinator"
version = "0.0.1"
license = "GPLv3"
homepage = "https://github.com/Trust-Machines/core-eng"
repository = "https://github.com/Trust-Machines/core-eng"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p256k1 = { workspace = true }
wsts = { workspace = true }
backoff = { workspace = true }
clap = { workspace = true }
hashbrown = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
frost-signer = { path = "../frost-signer" }
serde = { version = "1.0", features = ["serde_derive"] }

[dev-dependencies]
rand_core = { workspace = true }
rand = { workspace = true }
relay-server = { path = "../relay-server" }
test-utils = { path = "../test-utils" }

[lib]
path = "src/lib.rs"    # The source file of the target
crate-type = ["lib"]   # The crate types to generate

[[bin]]
name = "frost-coordinator"
path = "src/main.rs"
