[package]
name = "frost-signer"
version = "0.0.1"
license = "GPLv3"
homepage = "https://github.com/Trust-Machines/core-eng"
repository = "https://github.com/Trust-Machines/core-eng"
edition = "2021"

[lib]
path = "src/lib.rs"    # The source file of the target.
crate-type = ["lib"]   # The crate types to generate.

[dependencies]
bincode = "1.3.3"
clap = { version = "4.1.1", features = ["derive"] }
frost = { git = "https://github.com/trust-machines/frost", branch = "main" }
hashbrown = { version = "0.13", features = ["serde"] }
itertools = "^0.10.5"
rand_core = { version  = "0.5"}
p256k1 = { git = "https://github.com/Trust-Machines/p256k1", rev = "7baccde71130453e503c21dd1109f3005946c13e" }
serde = { version = "1.0", features = ["serde_derive"] }
sha3 = "0.10.6"
thiserror = "1.0"
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
ureq = { version = "2.6", features = [] }
