[package]
name = "frost-signer"
version = "0.0.1"
license = "GPLv3"
homepage = "https://github.com/Trust-Machines/core-eng"
repository = "https://github.com/Trust-Machines/core-eng"
edition = "2021"

[lib]
path = "src/lib.rs"    # The source file of the target.
crate-type = ["lib"]   # The crate types to generate.

[dependencies]
bincode = { workspace = true }
clap = { workspace = true }
p256k1 = { workspace = true }
wtfrost = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ureq = { workspace = true }
rand = { workspace = true }
