[package]
name = "frost-test"
version = "0.1.0"
edition = "2021"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relay-server = { path = "../relay-server" }
frost-coordinator = { path = "../frost-coordinator" }
frost-signer = { path = "../frost-signer" }
rand_core = { workspace = true }
hashbrown = { workspace = true }
wtfrost = { workspace = true }
