[package]
name = "frost-test"
version = "0.1.0"
edition = "2021"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relay-server = { path = "../relay-server" }
yarpc = { path = "../yarpc" }
frost-coordinator = { path = "../frost-coordinator" }
frost-signer = { path = "../frost-signer" }
rand_core = { workspace = true }
hashbrown = { workspace = true }
wtfrost = { workspace = true }
ureq = { workspace = true }
bitcoin = { version = "0.29.2", features = ["rand"] }
hex = "0.4.3"
ctrlc = "3.2.5"
nix = "0.26.2"
libc = "0.2.139"
test-utils = { path = "../test-utils" }
