[package]
name = "relay-server"
version = "0.1.0"
edition = "2021"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yarpc = { path = "../yarpc" }
tokio = { workspace = true, features = ["net", "macros", "rt", "time", "rt-multi-thread"]}
clap.workspace = true
async-trait.workspace = true
