[package]
name = "stacks-coordinator"
version = "0.0.1"
license = "GPLv3"
homepage = "https://github.com/Trust-Machines/core-eng"
repository = "https://github.com/Trust-Machines/core-eng"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58 = { workspace = true }
blockstack-core = { workspace = true }
clap = { workspace = true }
frost-coordinator = { path = "../frost-coordinator" }
frost-signer = { path = "../frost-signer" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stacks-signer = { path = "../stacks-signer" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
wtfrost = { workspace = true }
yarpc = { path = "../yarpc" }
bitcoin = { version = "0.29.2", features = ["rand", "bitcoinconsensus"] }
reqwest = { version = "0.11.14", features = ["blocking", "json"] }

[dev-dependencies]
mockall = { workspace = true }
