[package]
name = "stacks-coordinator"
version = "0.0.1"
license = "GPLv3"
homepage = "https://github.com/Trust-Machines/core-eng"
repository = "https://github.com/Trust-Machines/core-eng"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = { workspace = true }
blockstack-core = { workspace = true }
clap = { workspace = true }
frost-coordinator = { path = "../frost-coordinator" }
frost-signer = { path = "../frost-signer" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stacks-signer = { path = "../stacks-signer" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
wsts = { workspace = true }
bitcoin.workspace = true
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
backoff = { workspace = true }
ureq.workspace = true
url = { workspace = true }
bdk.workspace = true
hex.workspae = true

[dev-dependencies]
mockall = { workspace = true }
rand = "0.8.5"
test-utils = { path = "../test-utils" }
tempdir = "0.3.7"
