[package]
name = "stacks-doctor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
rusqlite.workspace = true
anyhow.workspace = true
