[package]
name = "stackes-js-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
stacks-coordinator = { path = "../stacks-coordinator" }
serde = { workspace = true }
serde_json = { workspace = true }
blockstack-core = { workspace = true }
