[package]
name = "stacks-signer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
serde_urlencoded = "0.7"
sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
warp = "0.3.5"

[dev-dependencies]
ntest = "0.9.0"