[package]
name = "stacks-signer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
parse-display = "0.8.1"
rand.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7"
sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-native-tls", "offline"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa = "3.3.0"
utoipa-swagger-ui = { version = "3.1.3" }
warp = "0.3.5"
dotenv = "0.15.0"

[dev-dependencies]
ntest = "0.9.0"
