[package]
name = "stacks-signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
frost-signer = { path = "../frost-signer" }
rand_core = "0.6"
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wtfrost = "3.0"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
testdir = "0.7.2"