[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { workspace = true }
hex.workspace = true
ureq = { workspace = true }
bitcoin = { version = "0.29.2", features = ["rand"] }
ctrlc = "3.2.5"
nix = "0.26.2"
libc = "0.2.139"
url = { workspace = true }
rand.workspace = true
wsts = { workspace = true }
uuid = { version = "1.4.1", features = ["v4"] }
once_cell = "1.18"
