[package]
name = "test-vectors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-bytes.workspace = true
bitcoin = { version = "0.30.0", features = ["serde"] }
clap.workspace = true
secp256k1.workspace = true
sha256.workspace = true
