[package]
name = "test_vector_generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-bytes = "6.0.0"
bitcoin = "0.27.1"
secp256k1 = { version="0.27.0", features=["global-context", "recovery"] }
sha256 = "1.1.2"

[workspace]